[gd_scene load_steps=34 format=3 uid="uid://bscew46ntriov"]

[ext_resource type="Script" path="res://ships/missile_ship/missile_ship.gd" id="1_wggi2"]
[ext_resource type="Script" path="res://ships/basic_ship/boost.gd" id="2_nafab"]
[ext_resource type="Texture2D" uid="uid://uf55r0ulcrpc" path="res://Ships.png" id="3_5etvw"]
[ext_resource type="PackedScene" uid="uid://do4o0k42eixaw" path="res://ships/ship_state_machine/ship_state_machine.tscn" id="4_0ncx7"]
[ext_resource type="Script" path="res://ships/generic_states/boid_state.gd" id="5_e2hr5"]
[ext_resource type="Script" path="res://ships/generic_states/circle.gd" id="6_so4bc"]
[ext_resource type="Script" path="res://ships/generic_states/follow_mouse.gd" id="7_gupu5"]
[ext_resource type="PackedScene" uid="uid://b16d8fcohve56" path="res://ships/ship_area/ship_area.tscn" id="8_1jvke"]
[ext_resource type="Script" path="res://ships/missile_ship/missile.gd" id="9_rlx12"]
[ext_resource type="PackedScene" uid="uid://cw5rrrkmrt6lu" path="res://ships/missile_ship/projectile/missile_shot.tscn" id="10_gjd6h"]
[ext_resource type="PackedScene" uid="uid://dncysgcenw0qx" path="res://death_particles.tscn" id="11_ne02d"]

[sub_resource type="Curve" id="Curve_xjb1h"]
_data = [Vector2(0, 0.615385), 0.0, 0.0, 0, 0, Vector2(0.846667, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_gkwdo"]
curve = SubResource("Curve_xjb1h")

[sub_resource type="Gradient" id="Gradient_xm4th"]
colors = PackedColorArray(0.245993, 0, 0.0383255, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_isw5s"]
gradient = SubResource("Gradient_xm4th")

[sub_resource type="Curve" id="Curve_7blia"]
max_value = 12.0
_data = [Vector2(0, 12), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_0papf"]
curve = SubResource("Curve_7blia")

[sub_resource type="Curve" id="Curve_i7yo7"]
_data = [Vector2(0, 0.769231), 0.0, 0.0, 0, 0, Vector2(1, 0.472527), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_jvgtt"]
curve = SubResource("Curve_i7yo7")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_tccvq"]
particle_flag_disable_z = true
direction = Vector3(-1, 0, 0)
spread = 10.0
initial_velocity_min = 84.51
initial_velocity_max = 98.59
gravity = Vector3(0, 0, 0)
scale_min = 0.05
scale_max = 0.05
scale_curve = SubResource("CurveTexture_jvgtt")
color_ramp = SubResource("GradientTexture1D_isw5s")
alpha_curve = SubResource("CurveTexture_gkwdo")
emission_curve = SubResource("CurveTexture_0papf")

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_85xlo"]
load_path = "res://.godot/imported/icon.svg-218a8f2b3041327d8a5756f3a245f83b.ctex"

[sub_resource type="GDScript" id="GDScript_darg2"]
script/source = "extends GPUParticles2D


func _process(_delta: float) -> void:
	if get_parent() is Ship:
		visible = get_parent().visual_data.get_item_value(\"thrusting\")
"

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_7728x"]
particle_flag_disable_z = true
direction = Vector3(-1, 0, 0)
spread = 10.0
initial_velocity_min = 84.51
initial_velocity_max = 98.59
gravity = Vector3(0, 0, 0)
scale_min = 0.05
scale_max = 0.05
scale_curve = SubResource("CurveTexture_jvgtt")
color_ramp = SubResource("GradientTexture1D_isw5s")
alpha_curve = SubResource("CurveTexture_gkwdo")
emission_curve = SubResource("CurveTexture_0papf")

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_akv2g"]
load_path = "res://.godot/imported/icon.svg-218a8f2b3041327d8a5756f3a245f83b.ctex"

[sub_resource type="GDScript" id="GDScript_0clqa"]
script/source = "extends GPUParticles2D


func _process(_delta: float) -> void:
	if get_parent() is Ship:
		visible = get_parent().visual_data.get_item_value(\"thrusting\")
"

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_hth4b"]
particle_flag_disable_z = true
direction = Vector3(-1, 0, 0)
spread = 10.0
initial_velocity_min = 145.16
initial_velocity_max = 145.16
gravity = Vector3(0, 0, 0)
scale_min = 0.05
scale_max = 0.05
scale_curve = SubResource("CurveTexture_jvgtt")
color_ramp = SubResource("GradientTexture1D_isw5s")
alpha_curve = SubResource("CurveTexture_gkwdo")
emission_curve = SubResource("CurveTexture_0papf")

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_kotcs"]
load_path = "res://.godot/imported/icon.svg-218a8f2b3041327d8a5756f3a245f83b.ctex"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h1b6b"]
size = Vector2(15.9956, 29.9826)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jjxn0"]
size = Vector2(13.0085, 22.9869)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_35usg"]
size = Vector2(86.0423, 3.99997)

[sub_resource type="Animation" id="Animation_kcaef"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("death:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Polygon2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Fire:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Fire2:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("boost:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_wcilg"]
resource_name = "death"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("death:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Polygon2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Fire:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Fire2:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("boost:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c27cd"]
_data = {
"RESET": SubResource("Animation_kcaef"),
"death": SubResource("Animation_wcilg")
}

[node name="MissileShip" type="CharacterBody2D"]
collision_mask = 2
script = ExtResource("1_wggi2")

[node name="Fire" type="GPUParticles2D" parent="."]
position = Vector2(-17, -34)
amount = 50
process_material = SubResource("ParticleProcessMaterial_tccvq")
texture = SubResource("CompressedTexture2D_85xlo")
lifetime = 0.5
local_coords = true
script = SubResource("GDScript_darg2")

[node name="Fire2" type="GPUParticles2D" parent="."]
position = Vector2(-17, 35)
amount = 50
process_material = SubResource("ParticleProcessMaterial_7728x")
texture = SubResource("CompressedTexture2D_akv2g")
lifetime = 0.5
local_coords = true
script = SubResource("GDScript_0clqa")

[node name="boost" type="GPUParticles2D" parent="."]
position = Vector2(-13, 0)
amount = 100
process_material = SubResource("ParticleProcessMaterial_hth4b")
texture = SubResource("CompressedTexture2D_kotcs")
lifetime = 0.5
local_coords = true
script = ExtResource("2_nafab")

[node name="Polygon2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(1.65, 1.65)
texture = ExtResource("3_5etvw")
hframes = 8
vframes = 2
frame = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0.982834, -0.00222015)
rotation = 1.57509
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_h1b6b")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0.499989, 34.5021)
rotation = 1.57509
scale = Vector2(0.999999, 0.999999)
shape = SubResource("RectangleShape2D_jjxn0")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-5.96046e-08, -35)
rotation = 1.57509
scale = Vector2(0.999999, 0.999999)
shape = SubResource("RectangleShape2D_jjxn0")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-2.04714, -0.0216684)
rotation = 1.57509
scale = Vector2(0.999999, 0.999999)
shape = SubResource("RectangleShape2D_35usg")

[node name="ShipStateMachine" parent="." instance=ExtResource("4_0ncx7")]

[node name="BoidState" type="Node" parent="ShipStateMachine"]
script = ExtResource("5_e2hr5")

[node name="Circle" type="Node" parent="ShipStateMachine"]
script = ExtResource("6_so4bc")
id = "circle"

[node name="FollowMouse" type="Node" parent="ShipStateMachine"]
script = ExtResource("7_gupu5")
first_active_state = true

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
position_smoothing_enabled = true
position_smoothing_speed = 7.0

[node name="ShipArea" parent="." instance=ExtResource("8_1jvke")]

[node name="gun1" type="Node2D" parent="." node_paths=PackedStringArray("fire_position_node")]
position = Vector2(12, -35)
script = ExtResource("9_rlx12")
projectile_scene = ExtResource("10_gjd6h")
fire_position_node = NodePath(".")

[node name="gun2" type="Node2D" parent="." node_paths=PackedStringArray("fire_position_node")]
position = Vector2(12, 25)
script = ExtResource("9_rlx12")
projectile_scene = ExtResource("10_gjd6h")
fire_position_node = NodePath(".")

[node name="gun3" type="Node2D" parent="." node_paths=PackedStringArray("fire_position_node")]
position = Vector2(12, 35)
script = ExtResource("9_rlx12")
projectile_scene = ExtResource("10_gjd6h")
fire_position_node = NodePath(".")

[node name="gun4" type="Node2D" parent="." node_paths=PackedStringArray("fire_position_node")]
position = Vector2(12, 45)
script = ExtResource("9_rlx12")
projectile_scene = ExtResource("10_gjd6h")
fire_position_node = NodePath(".")

[node name="gun5" type="Node2D" parent="." node_paths=PackedStringArray("fire_position_node")]
position = Vector2(12, -45)
script = ExtResource("9_rlx12")
projectile_scene = ExtResource("10_gjd6h")
fire_position_node = NodePath(".")

[node name="gun6" type="Node2D" parent="." node_paths=PackedStringArray("fire_position_node")]
position = Vector2(12, -25)
script = ExtResource("9_rlx12")
projectile_scene = ExtResource("10_gjd6h")
fire_position_node = NodePath(".")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_c27cd")
}

[node name="death" parent="." instance=ExtResource("11_ne02d")]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
